# logger

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bash  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docker-image.yml
cfg/: log4rs.yml
inc/: Logger.hpp
inc/test/: myLib.hpp
log-layer/: Cargo.toml
log-layer/src/: lib.rs
src/: main.cpp
src/test/: mylib.cpp
